--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,26 @@
-.aws
-.github
-.vscode
-apps
-docker
+./.aws/*
+./.github/*
+./.vscode/*
+./apps/*
+./docker/*
 logs/*
 outputs/*
-scripts/benchmarks
-scripts/demos
-scripts/environments
-scripts/imitation_learning
-scripts/tools
-scripts/tutorials
+scripts/benchmarks/*
+scripts/demos/*
+scripts/environments/*
+scripts/imitation_learning/*
+scripts/tools/*
+scripts/tutorials/*
+tools/*
+.dockerignore
+.pre-commit-config.yaml
+CONTRIBUTING.md
+CONTRIBUTORS.md
+isaaclab.bat
+isaaclab.sh
+LICENSE
+LICENSE-mimic
+pyproject.toml
+SECURITY.md
+README.md
+VERSION
