added maze spawning, 16->4096 n_steps PPO, 0.01->0.02 ent_coeff PPO, 20 goal, -20 term, 2 delta dist

--- a/source/isaaclab_tasks/isaaclab_tasks/direct/jetbot/agents/sb3_ppo_cfg.yaml
+++ b/source/isaaclab_tasks/isaaclab_tasks/direct/jetbot/agents/sb3_ppo_cfg.yaml
@@ -3,17 +3,17 @@ seed: 42
 
 n_timesteps: !!float 5e6
 policy: 'MlpPolicy'
-n_steps: 16
+n_steps: 4096
 batch_size: 128
 gae_lambda: 0.95
-gamma: 0.98
+gamma: 0.99
 n_epochs: 20
-ent_coef: 0.01
-learning_rate: !!float 3e-4
+ent_coef: 0.02
+learning_rate: !!float 1e-4
 clip_range: !!float 0.2
 policy_kwargs: "dict(
                   activation_fn=nn.ReLU,
-                  net_arch=[64, 64],
+                  net_arch=[256,128,64],
                   squash_output=False,
                 )"
 vf_coef: 1.0
