--- a/source/isaaclab_tasks/isaaclab_tasks/direct/jetbot/agents/sb3_ppo_cfg.yaml
+++ b/source/isaaclab_tasks/isaaclab_tasks/direct/jetbot/agents/sb3_ppo_cfg.yaml
@@ -1,19 +1,20 @@
 # Reference: https://github.com/DLR-RM/rl-baselines3-zoo/blob/master/hyperparams/ppo.yml#L32
 seed: 42
 
-n_timesteps: !!float 5e6
+n_timesteps: !!float 4e6
 policy: 'MlpPolicy'
 n_steps: 4096
-batch_size: 128
+batch_size: 256
 gae_lambda: 0.95
 gamma: 0.99
 n_epochs: 20
 ent_coef: 0.02
-learning_rate: !!float 1e-4
+learning_rate: !!float 2e-4
+decaying_learning_rate: !!bool true
 clip_range: !!float 0.2
 policy_kwargs: "dict(
                   activation_fn=nn.ReLU,
-                  net_arch=[256,128,64],
+                  net_arch=[196,64],
                   squash_output=False,
                 )"
 vf_coef: 1.0
