--- a/source/isaaclab_tasks/isaaclab_tasks/direct/jetbot/agents/skrl_ppo_lagrangian_cfg.yaml
+++ b/source/isaaclab_tasks/isaaclab_tasks/direct/jetbot/agents/skrl_ppo_lagrangian_cfg.yaml
@@ -59,7 +59,7 @@ agent:
   ratio_clip: 0.2
   value_clip: 0.2
   clip_predicted_values: True
-  entropy_loss_scale: 0.02
+  entropy_loss_scale: 0.08
   value_loss_scale: 2.0
   kl_threshold: 0.0
   rewards_shaper_scale: 0.1
@@ -75,26 +75,26 @@ agent:
 lagrangian:
   initial_lambda: 0.0
   cost_limit: 0.005
-  min_safety_probability: 0.99
+  min_safety_probability: 0.9
   learning_rate_lambda: 0.5
+  decay_lambda_lr: False
 
 # Sequential trainer
 # https://skrl.readthedocs.io/en/latest/api/trainers/sequential.html
 trainer:
   class: SequentialTrainer
-  timesteps: 200
+  timesteps: 400
   environment_info: log
-  total_timesteps: 1000
+  total_timesteps: 100000
 
 # Environment configuration
 rewards:
   goal: 10
   distance: 40
-  termination: -3
+  termination: -4
   time: null
-  movement: 1
-  movement_threshold: 0.01
+  movement: null # has to be positive
+  movement_threshold: null
 costs:
-  obstacle: 2
+  obstacle: 3
 min_dist: 0.16
-
