--- a/source/isaaclab_tasks/isaaclab_tasks/direct/jetbot/agents/skrl_ppo_cfg_maze.yaml
+++ b/source/isaaclab_tasks/isaaclab_tasks/direct/jetbot/agents/skrl_ppo_cfg_maze.yaml
@@ -9,7 +9,7 @@ models:
     class: GaussianMixin
     clip_actions: False
     clip_log_std: True
-    min_log_std: -20.0
+    min_log_std: -2.0
     max_log_std: 2.0
     initial_log_std: 0.0
     network:
@@ -59,7 +59,7 @@ agent:
   ratio_clip: 0.2
   value_clip: 0.2
   clip_predicted_values: True
-  entropy_loss_scale: 0.02
+  entropy_loss_scale: 0.04
   value_loss_scale: 2.0
   kl_threshold: 0.0
   rewards_shaper_scale: 0.1
@@ -74,8 +74,8 @@ agent:
 # Lagrangian configuration
 lagrangian:
   initial_lambda: 0.0
-  cost_limit: 0.0005
-  min_safety_probability: 0.9
+  cost_limit: 0.02
+  min_safety_probability: 0.99
   learning_rate_lambda: 0.1
   decay_lambda_lr: True
 
@@ -89,14 +89,12 @@ trainer:
 
 # Environment configuration
 rewards:
-  goal: 50
+  goal: 60
   distance: 10
-  termination: -10
-  time: null
-  movement: null # has to be positive
+  termination: -50
   movement_threshold: null
-  exploration_reward: 5
-  exploration_penalty: 0.0
+  exploration_reward: null #3
+  exploration_penalty: null #-0.1
 costs:
-  obstacle: 10
+  obstacle: 6
 min_dist: 0.15
